# Heady-Testing

./: .commitlintrc.json  .dockerignore  .dockerignore.monorepo  .editorconfig  .env  .env.example  .env.production  .env.rebuild.example  .env.template  .eslintrc.js  .eslintrc.json  .gcloudignore  .gitattributes  .gitignore  .gitignore.dropzone  .gitleaksignore  .lintstagedrc.json  .mcp.json  .npmrc  .prettierrc  .prettierrc.aether  .prettierrc.json  .windsurfrules  03-UNBREAKABLE_LAWS.md  04-MASTER_DIRECTIVES.md  05-heady-auto-context.js  06-vector-memory.js  07-auth-manager.js  08-bee-factory.js  09-swarm-coordinator.js  10-seventeen-swarm-orchestrator.js  12-heady-registry.json  17-domain-aliases.json  ACTIVE_LAYER_POLICY.md  AGENTS.md  ARCHITECTURE.md  BUDDY_KERNEL.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  (+131 more)
.benchmarks/: README.md  baseline.json  k6-health-check.js  k6-mcp-tools.js  run-benchmarks.sh
.claude/: HEADY_DEEP_SCAN.md  README.md  settings.json
.gemini/: settings.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  cloudbuild.yaml  copilot-instructions.md  copilot-mcp-config.json  dependabot.yml  pull_request_template.md
.heady/: arena-mode.yaml  branch-automation.yaml  context-sync-state.json  monte-carlo-config.yaml  registry.json  rx-history.json  socratic-rules.yaml  stories.json
.heady-memory/: immediate_context.json  pattern-analysis.json  personal-data-scan.json
.heady_cache/: pattern_store.json
.husky/: pre-commit
.well-known/: mcp.json
.windsurf/: HEADY_SUPER_PROMPT_v5.md  admin-config.yaml  heady-only-enforcement.yaml  headycloud-config.yaml  model_config.yaml
01-foundations/: vsa-foundations.md
02-implementation-references/: duckdb-vss-semantics.md
13-animal-archetypes/: LAW-07-auto-success-engine.md
HeadyAI-IDE/: main.js  package.json  (+3 more)
python/: heady-colab-coordinator.py  heady_os.py  pyproject.toml  requirements.txt
python/core/: cache.py  database.py  env_loader.py  http_client.py  http_server.py  monte_carlo.py  pipeline.py  sacred_geometry.py  semantic_logic.py  telemetry.py  vector_memory.py
python/heady/: heady_auth.py  heady_vectors.py
python/infra/postgres/: schema.sql
python/notebooks/: 01_monte_carlo_simulation.ipynb
python/services/: __init__.py  mcp_bridge.py
python/tests/: __init__.py  test_monte_carlo.py  test_pipeline.py  test_sacred_geometry.py  test_semantic_logic.py  test_vector_memory.py  test_vector_space_ops.py
(+13825 files in other folders)
