[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heady-systems"
version = "0.1.0"
description = "Heady Systems - Sacred Geometry :: Organic Systems :: Breathing Interfaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary - Heady Systems"}
authors = [
    {name = "Heady Systems"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/HeadySystems/Heady"
Repository = "https://github.com/HeadySystems/Heady"

