[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heady-sdk"
version = "0.1.0"
description = "Heady™ Latent Operating System — Python SDK for Sacred Geometry AI orchestration"
readme = "README.md"
license = {text = "Proprietary — HeadySystems™ & HeadyConnection™"}
requires-python = ">=3.9"
authors = [
    {name = "HeadySystems", email = "dev@headysystems.com"},
]
keywords = ["ai", "orchestration", "vector-space", "sacred-geometry", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
full = [
    "numpy>=1.24",
    "scipy>=1.10",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
]

[project.urls]
Homepage = "https://headysystems.com"
Documentation = "https://docs.headysystems.com"
Repository = "https://github.com/HeadyMe/Heady"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py39"
